[package]
name = "ECC-Washington"
version = "0.1.0"
authors = ["doktorfaust <dokfaust@autistici.org>"]
exclude = [".gitignore"]

#If the UNTESTED ag is present it means that some commited
#code needs to be checked. Please refers to the issues page on GitHub

keywords = ["UNTESTED","cryptography", "elliptic", "curve", "ECC"]
description = "A first basic implementation of ECC in Rust INCOMPLETE UNSTABLE"

[dependencies.arrayref]
version = "0.3.3"

[dependencies.rand]
optional = true
version = "0.3"

[features]
default = ["std"]
std = ["rand"]
